// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LootTable process $s 1`] = `
{
  "documentation": "example",
  "id": "loot_tables/blocks/example.json",
  "location": {
    "position": 0,
    "uri": "F:\\Temp2\\world\\behavior_packs\\EW-BP\\loot_tables\\blocks\\example.json",
  },
}
`;

exports[`LootTable process $s 2`] = `
{
  "documentation": "example",
  "id": "loot_tables/blocks/example.json",
  "location": {
    "position": 0,
    "uri": "F:/Temp2/world/behavior_packs/EW-BP/loot_tables/blocks/example.json",
  },
}
`;

exports[`LootTable process $s 3`] = `
{
  "documentation": "example",
  "id": "loot_tables/blocks example.json",
  "location": {
    "position": 0,
    "uri": "F:/Temp2/world/behavior_packs/EW-BP/loot_tables/blocks example.json",
  },
}
`;
